ARC-207: Stop metadata fields in search from wrapping with default width (#41)
* Stop metadata fields from wrapping with default width

* Satiate eslint

--- a/src/views/sidebar/components/main-search-tab/main-search-tab.scss
+++ b/src/views/sidebar/components/main-search-tab/main-search-tab.scss
@@ -82,7 +82,7 @@
             justify-content: space-between;
             align-items: flex-start;
         }
-    
+
         &-wrapper {
             display: flex;
             flex-direction: column;
@@ -111,9 +111,16 @@
 
         &-selects {
             margin-bottom: 3px;
+            select {
+              width: 45%;
+            }
+            &-delete-hidden {
+              opacity: 0;
+              pointer-events: none;
+            }
         }
     }
-    
+
     &-item {
         &-separator {
             margin: 0 auto;
